force-app/main/default/objects/Receiving_Task__c/Receiving_Task__c.object-meta.xml
<CustomObject>
    <label>Receiving Task</label>
    <nameField>
        <displayFormat>RCV-{00000}</displayFormat>
        <label>Receiving Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receiving Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>