force-app/main/default/objects/Receiving_Task__c/fields/Damaged_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Damaged Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>