force-app/main/default/objects/Receiving_Task__c/fields/Inbound_Shipment_Line__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Shipment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Shipment Line</label>
    <referenceTo>Inbound_Shipment_Line__c</referenceTo>
    <relationshipLabel>Receiving Tasks</relationshipLabel>
    <relationshipName>Receiving_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>