force-app/main/default/objects/Receiving_Task__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Receiving Tasks</relationshipLabel>
    <relationshipName>Receiving_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>