force-app/main/default/objects/Receiving_Task__c/fields/Receiving_Bin__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Bin</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Receiving Tasks</relationshipLabel>
    <relationshipName>Receiving_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>