force-app/main/default/objects/Receiving_Task__c/validationRules/Damaged_Cannot_Exceed_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Damaged_Cannot_Exceed_Received</fullName>
    <active>true</active>
    <errorConditionFormula>Damaged_Quantity__c &gt; Received_Quantity__c</errorConditionFormula>
    <errorMessage>Damaged quantity cannot exceed received quantity.</errorMessage>
</ValidationRule>